<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.password_reset.PasswordResetInputFormFragment">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/password_reset_input_form_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="sans-serif-medium"
                android:text="@string/password_reset_message"
                android:textAppearance="@style/Shinoken.TextAppearance.Caption.DarkBlue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_code_layout"
                style="@style/Shinoken.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/confirm_code"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_layout"
                style="@style/Shinoken.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/new_password"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_confirm_layout"
                style="@style/Shinoken.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/new_password_confirm"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_confirm_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_reset_code_form_description_mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="sans-serif-medium"
                android:text="@string/code_form_description_mail_format"
                android:textAppearance="@style/Shinoken.TextAppearance.Caption.DarkBlue" />

            <TextView
                android:id="@+id/password_reset_code_form_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/password_reset_input_form_description1"
                android:textAppearance="@style/Shinoken.TextAppearance.Caption2.DarkBlue" />

            <TextView
                android:id="@+id/password_reset_form_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/password_reset_input_form_description2"
                android:textAppearance="@style/Shinoken.TextAppearance.Caption2.DarkBlue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16">

                <jp.co.shinoken.ui.widget.UnderLineTextView
                    android:id="@+id/resend_code_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:underLineText="@string/password_reset_input_form_help" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/password_reset_change_button"
                    style="@style/Theme.Shinoken.PrimaryButton.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>